implementação tipos de pagamentos